--- a/main.css
+++ b/main.css
@@ -139,10 +139,10 @@ margin-right: auto;padding:20px 0px 30px 0px;box-sizing: border-box;display:flex
   }
 
   .artists {
-    width: 100%
+    width: 100%;
     }
 .artists img  {
-  width: 100%
+  width: 100%;
 }
 }
 
